Add tooltip text to curval selection to show full text value

--- a/views/edit.tt
+++ b/views/edit.tt
@@ -435,7 +435,12 @@
                             [% FOREACH enumval IN enumvals %]
                                 [% UNLESS enumval.deleted %]
                                     <option value="[% enumval.id %]" [% IF editvalue.id_hash.${enumval.id} %]selected[% END %]
-                                        data-subtext="[% enumval.subvalue %]">[% enumval.mainvalue | html_entity %]
+                                        title="[% enumval.mainvalue | html_entity %]" [%# only show main title in selection %]
+                                        [%# custom content for each option in order to show tooltip text %]
+                                        data-content="<span title='[% enumval.value | html_entity %]'>
+                                            [% enumval.mainvalue | html_entity %]
+                                            <small class='text-muted'>[% enumval.subvalue | html_entity %]</small>
+                                        </span>"
                                     </option>
                                 [% END %]
                             [% END %]
