--- a/views/view.tt
+++ b/views/view.tt
@@ -83,6 +83,7 @@
             <button id="saveview" type="submit" name="update" value="update" class="btn btn-primary" onclick="UpdateFilter()">
                 Save
             </button>
+            <a href="/data" class="btn btn-default">Cancel</a>
             [% IF v.id AND NOT clone %]
                 <a href="" class="btn btn-default" data-toggle="modal" data-target="#myModal">Delete</a>
             [% END %]
