Ensure at least one value is displayed for multivalue plus fields

--- a/views/edit.tt
+++ b/views/edit.tt
@@ -382,7 +382,11 @@
         [% END %]
         [% IF dispcol.multivalue %]
             [% IF dispcol.has_multivalue_plus %]
-                [% WHILE editvalue.html_form.size %]
+                [% IF editvalue.html_form.size %]
+                    [% WHILE editvalue.html_form.size %]
+                        [% PROCESS print_field %]
+                    [% END %]
+                [% ELSE %]
                     [% PROCESS print_field %]
                 [% END %]
             [% ELSE %]
