Wrap text in multiple selects

--- a/public/css/local.css
+++ b/public/css/local.css
@@ -109,3 +109,8 @@ table.floatThead-table {
     }
 }
 
+.bootstrap-select .dropdown-menu li a {
+    white-space: normal;
+    margin: 0 15px 0 0;
+}
+
