--- a/views/layout.tt
+++ b/views/layout.tt
@@ -687,7 +687,7 @@ available permissions are detailed in the <a href="[% url.page %]/user/">Users m
                 $(divid).show();
             });
             [% FOREACH instance IN instance_layouts %]
-                [% PROCESS builder.tt builder_id = instance.layout.instance_id all_columns = instance.layout.all filter_normal = column.filter filter_base64 = column.filter.base64 %]
+                [% PROCESS builder.tt builder_id = instance.layout.instance_id all_columns = instance.layout.all_with_internal filter_normal = column.filter filter_base64 = column.filter.base64 %]
             [% END %]
             [% IF column.filter.as_json AND NOT column.filter.as_json.match('^[{}\s]*$') %]
                 var data = decodeBase64('[% column.filter.base64 %]');
