--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1,49 +1,59 @@
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 
 @font-face {
-  font-family: 'Open Sans';
-  font-weight: 300;
-  font-style: normal;
-  src: url('/fonts/Open-Sans-300.eot');
-  src: url('/fonts/Open-Sans-300.eot?#iefix') format('embedded-opentype'),
-       local('Open Sans Light'),
-       local('Open-Sans-300'),
-       url('/fonts/Open-Sans-300.woff2') format('woff2'),
-       url('/fonts/Open-Sans-300.woff') format('woff'),
-       url('/fonts/Open-Sans-300.ttf') format('truetype'),
-       url('/fonts/Open-Sans-300.svg#OpenSans') format('svg');
+        font-family: 'Open Sans remote';
+        font-style: normal;
+        font-weight: 300;
+        src:
+                local('Open Sans Light'),
+                local('OpenSans-Light'),
+                /* from https://fonts.gstatic.com/s/opensans/v13/DXI1ORHCpsQm3Vp6mXoaTXZ2MAKAc2x4R1uOSeegc5U.eot */
+                url('/fonts/Open_Sans_300.eot?#iefix') format('embedded-opentype'),
+                /* from https://fonts.gstatic.com/s/opensans/v13/DXI1ORHCpsQm3Vp6mXoaTXhCUOGz7vYGh680lGh-uXM.woff */
+                url('/fonts/Open_Sans_300.woff') format('woff'),
+                /* from https://fonts.gstatic.com/s/opensans/v13/DXI1ORHCpsQm3Vp6mXoaTegdm0LZdjqr5-oayXSOefg.woff2 */
+                url('/fonts/Open_Sans_300.woff2') format('woff2'),
+                /* from https://fonts.gstatic.com/l/font?kit=DXI1ORHCpsQm3Vp6mXoaTVlIn5tFQcqMuf-jhyJP0ps&skey=b33cc031a589c168&v=v13#OpenSans */
+                url('/fonts/Open_Sans_300.svg#OpenSans') format('svg');
 }
 
 @font-face {
-  font-family: 'Open Sans';
-  font-weight: 400;
-  font-style: normal;
-  src: url('/fonts/Open-Sans-regular.eot');
-  src: url('/fonts/Open-Sans-regular.eot?#iefix') format('embedded-opentype'),
-       local('Open Sans'),
-       local('Open-Sans-regular'),
-       url('/fonts/Open-Sans-regular.woff2') format('woff2'),
-       url('/fonts/Open-Sans-regular.woff') format('woff'),
-       url('/fonts/Open-Sans-regular.ttf') format('truetype'),
-       url('/fonts/Open-Sans-regular.svg#OpenSans') format('svg');
+        font-family: 'Open Sans remote';
+        font-style: normal;
+        font-weight: 400;
+        src:
+                local('Open Sans'),
+                local('OpenSans'),
+                /* from https://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3fY6323mHUZFJMgTvxaG2iE.eot */
+                url('/fonts/Open_Sans_400.eot?#iefix') format('embedded-opentype'),
+                /* from https://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3T8E0i7KZn-EPnyo3HZu7kw.woff */
+                url('/fonts/Open_Sans_400.woff') format('woff'),
+                /* from https://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3VtXRa8TVwTICgirnJhmVJw.woff2 */
+                url('/fonts/Open_Sans_400.woff2') format('woff2'),
+                /* from https://fonts.gstatic.com/l/font?kit=cJZKeOuBrn4kERxqtaUH3Zbd9NUM7myrQQz30yPaGQ4&skey=62c1cbfccc78b4b2&v=v13#OpenSans */
+                url('/fonts/Open_Sans_400.svg#OpenSans') format('svg');
 }
 
 @font-face {
-  font-family: 'Open Sans';
-  font-weight: 700;
-  font-style: normal;
-  src: url('/fonts/Open-Sans-700.eot');
-  src: url('/fonts/Open-Sans-700.eot?#iefix') format('embedded-opentype'),
-       local('Open Sans Bold'),
-       local('Open-Sans-700'),
-       url('/fonts/Open-Sans-700.woff2') format('woff2'),
-       url('/fonts/Open-Sans-700.woff') format('woff'),
-       url('/fonts/Open-Sans-700.ttf') format('truetype'),
-       url('/fonts/Open-Sans-700.svg#OpenSans') format('svg');
+        font-family: 'Open Sans remote';
+        font-style: normal;
+        font-weight: 700;
+        src:
+                local('Open Sans Bold'),
+                local('OpenSans-Bold'),
+                /* from https://fonts.gstatic.com/s/opensans/v13/k3k702ZOKiLJc3WVjuplzHZ2MAKAc2x4R1uOSeegc5U.eot */
+                url('/fonts/Open_Sans_700.eot?#iefix') format('embedded-opentype'),
+                /* from https://fonts.gstatic.com/s/opensans/v13/k3k702ZOKiLJc3WVjuplzHhCUOGz7vYGh680lGh-uXM.woff */
+                url('/fonts/Open_Sans_700.woff') format('woff'),
+                /* from https://fonts.gstatic.com/s/opensans/v13/k3k702ZOKiLJc3WVjuplzOgdm0LZdjqr5-oayXSOefg.woff2 */
+                url('/fonts/Open_Sans_700.woff2') format('woff2'),
+                /* from https://fonts.gstatic.com/l/font?kit=k3k702ZOKiLJc3WVjuplzFlIn5tFQcqMuf-jhyJP0ps&skey=cd9e1a36bb25a3c3&v=v13#OpenSans */
+                url('/fonts/Open_Sans_700.svg#OpenSans') format('svg');
 }
+
 
 html {
-  font-family: 'Open Sans',sans-serif;
+  font-family: 'Open Sans remote',sans-serif;
 }
 #wrapper{
   width: 95%; 
@@ -69,7 +79,7 @@ optgroup {
 	font-weight:bold;
 }
 body {
-	font-family:Open Sans;
+	font-family:Open Sans remote;
 	font-size:15px;
 }
 a {
@@ -89,7 +99,7 @@ hr {
 	border-top:1px solid #eeeeee;
 }
 h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
-	font-family:Open Sans;
+	font-family:Open Sans remote;
 }
 h1 small,h2 small,h3 small,h4 small,h5 small,h6 small,.h1 small,.h2 small,.h3 small,.h4 small,.h5 small,.h6 small,h1 .small,h2 .small,h3 .small,h4 .small,h5 .small,h6 .small,.h1 .small,.h2 .small,.h3 .small,.h4 .small,.h5 .small,.h6 .small {
 	font-weight:normal;
