--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -34,7 +34,7 @@
             <link rel="stylesheet" href="[% url.css %]/ctrlo-bootstrap.css">
         [% END %]
 
-        [% IF page == "layout" OR page == "edit" OR page == "approval" OR page =="audit" OR page == "bulk" %]
+        [% IF page == "layout" OR page == "edit" OR page == "approval" OR page =="audit" OR page == "bulk" OR page == "data"%]
             <link rel="stylesheet" href="[% url.css %]/jstree.min.css" />
             <link rel="stylesheet" href="[% url.css %]/bootstrap-datepicker.min.css" />
             <link rel="stylesheet" href="[% url.css %]/bootstrap-select.min.css" />
@@ -128,13 +128,15 @@
                                 [% END %]
                             </ul>
                             [% IF page == "data" OR page == "index" OR page == "record" %]
-                                <form class="navbar-form navbar-left" role="search" action="/data" method="post">
-                                    <div class="form-group">
-                                        <input type="text" name="search_text" class="form-control" title="Use * as a wildcard character" placeholder="Use * as wildcard" value="[% search | html_entity %]">
-                                    </div>
-                                    <button type="submit" name="search" value="search" class="btn btn-default">Search</button>
-                                    <button type="submit" name="clear" value="clear" class="btn btn-default">Clear</button>
-                                </form>
+                                [% UNLESS session.rewind %]
+                                    <form class="navbar-form navbar-left" role="search" action="/data" method="post">
+                                        <div class="form-group">
+                                            <input type="text" name="search_text" class="form-control" title="Use * as a wildcard character" placeholder="Use * as wildcard" value="[% search | html_entity %]">
+                                        </div>
+                                        <button type="submit" name="search" value="search" class="btn btn-default">Search</button>
+                                        <button type="submit" name="clear" value="clear" class="btn btn-default">Clear</button>
+                                    </form>
+                                [% END %]
                             [% END %]
                             <ul class="nav navbar-nav navbar-right">
                                 [% IF instances.size > 1 %]
@@ -176,6 +178,10 @@
                 </div>
             [% END %]
 
+            [% IF session.rewind %]
+                <div class="alert alert-info">You are viewing data as it was on [% session.rewind.format_cldr(config.dateformat) %] at [% session.rewind.hms %]</div>
+            [% END %]
+
             [% content %]
 
         </div><!-- /.container -->
@@ -195,7 +201,7 @@
             <script src="[% scheme %]://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
             <script src="[% scheme %]://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/tooltip.min.js"></script>
         [% END %]
-        [% IF page == "edit" OR page == "approval" OR page == "audit" OR page == "bulk" %]
+        [% IF page == "edit" OR page == "approval" OR page == "audit" OR page == "bulk" OR page == "data" %]
             <script type="text/javascript" src="[% url.js %]/bootstrap-datepicker.js"></script>
             <script type="text/javascript">
                 $(document).ready(function() {
