--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -58,6 +58,9 @@
                 <link rel="stylesheet" href="[% scheme %]://cdn.datatables.net/plug-ins/9dcbecd42ad/integration/bootstrap/3/dataTables.bootstrap.css">
             [% END %]
         [% END %]
+        [% IF page == "config" %]
+            <link href="[% url.css %]/summernote.css" rel="stylesheet">
+        [% END %]
 
         <!-- Custom styles for this template -->
         <link rel="stylesheet" href="[% url.css %]/local.css">
@@ -249,7 +252,11 @@
             <script type='text/javascript' src='[% url.js %]/fontdetect.min.js'></script>
         [% END %]
         [% IF page == "config" %]
-            <script type="text/javascript" src="[% url.js %]/tiny_mce/tiny_mce.js"></script>
+            [% IF 0 %]
+                <script type="text/javascript" src="[% url.js %]/tiny_mce/tiny_mce.js"></script>
+            [% ELSE %]
+                <script src="[% url.js %]/summernote.min.js"></script>
+            [% END %]
         [% END %]
         [% IF page == "user" OR page == "account" %]
             [% IF hostlocal %]
