--- a/views/data.tt
+++ b/views/data.tt
@@ -100,10 +100,10 @@
                 <form method="get" class="form-horizontal" role="form">
                     <div class="form-group">
                         <div class="col-sm-4">
-                            <label for="inputEmail3" class="col-sm-2 control-label">Rows&nbsp;per&nbsp;page</label>
+                            <label for="rows_per_page" class="col-sm-2 control-label">Rows per page</label>
                         </div>
                         <div class="col-sm-8">
-                            <select class="form-control" name="rows" onchange="this.form.submit()">
+                            <select id="rows_per_page" class="form-control" name="rows" onchange="this.form.submit()">
                                 <option value="10" [% IF subset.rows == 10 %]selected[% END %]>10</option>
                                 <option value="25" [% IF subset.rows == 25 %]selected[% END %]>25</option>
                                 <option value="50" [% IF subset.rows == 50 %]selected[% END %]>50</option>
